resources/assets/stylesheets/less/helpbar.less
@helpbar-width: 250px;

.helpbar-toggler {
    width: 24px;
    height: 24px;
    overflow: hidden;

    display: inline-block;
}

.helpbar-container {
    clear: both;
    height: 28px;
    position: relative;
    top: 1px;
    min-width: 32px;
    /*width: 100%;*/
    right: 12px;

    float: right;

    h2, h3 {
        border-bottom: 0;
        color: @white;
        font-size: 1em;
        font-weight: normal;
        margin: 0;
        padding: 0;
    }
    h2 {
        font-size: 1.2em;
    }
    h3 {
        border-bottom: 1px dotted @base-color-80;
        font-size: 1.1em;
        margin-bottom: 2px;
        padding-bottom: 2px;
    }

    > .helpbar-toggler {
        float: right;
        margin-top: 2px;
        margin-right: 5px;
    }
}

.helpbar {
    background-color: @base-color;
    padding: 8px;
    box-sizing: border-box;

    @border-width: 4px;

    position: absolute;
    right: -2px;
    top: 0px;

    width: @helpbar-width;
    z-index: 1000;

    &::before {
        border-bottom: 2px solid @base-color-80;
        border-left: @border-width solid transparent;
        border-right: @border-width solid transparent;
        content: '';
        display: none;
        position: absolute;
        top: -1px;
        left: 0;
        right: 0;
    }

    .helpbar-title {
        display: flex;
        justify-content: space-between;
    }

    .helpbar-toggler {
        margin-top: -5px;
        margin-right: -1px;
    }

    .helpbar-widgets {
        color: @white;
        list-style: none;
        padding: 0;

        a {
            vertical-align: text-bottom;
        }
        a:link, a:visited {
            color: @white;
        }
        a:hover, a:active {
            text-decoration: underline;
        }
        > li {
            border-top: 1px solid @content-color;
            padding: 3px 0;
            margin: .4em .25em;
        }
    }
    .help-tours {
        list-style: none;
        margin: 0;
        padding: 0;
        a {
            .background-icon('play', 'info_alt');
            background-position: left 2px;
            background-repeat: no-repeat;
            display: block;
            padding-left: 20px;
            &.tour-paused {
                .background-icon('pause', 'info_alt');
            }
            &.tour-completed {
                .background-icon('accept', 'info_alt');
            }
        }
    }

    a.link-extern {
        .icon('before', 'link-extern', 'info_alt');
    }
    a.link-intern {
        .icon('before', 'link-intern', 'info_alt');
    }
}

section.big-help-box {
    background-color: #d4dbe5;
    border: 1px solid #7e92b0;
    padding: 0.5em;
    margin-top: 0.5em;
    text-align: center;
    display: flex;
    flex-direction: row;

    .icon {
        flex-grow: 1;
    }

    .text {
        flex-grow: 5;
    }
}

